fix error in crud notes
