# backend/app/router.go
@@ -18,50 +18,43 @@ func WrapHandlerWithMiddleware(handler http.Handler) httprouter.Handle {
 
 func WrapHandlerWithJWT(handler httprouter.Handle) httprouter.Handle {
 	return func(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
-		h := http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		middleware.JWTAuth(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 			handler(w, r, ps)
-		})
-		middleware.JWTAuth(h).ServeHTTP(w, r)
+		})).ServeHTTP(w, r)
 	}
 }
 
-func NewRouter(userController controller.UserController) *httprouter.Router {
-    router := httprouter.New()
+func NewRouter(userController controller.UserController, noteController controller.NoteController) *httprouter.Router {
+	router := httprouter.New()
 
-    router.POST("/users", WrapHandlerWithMiddleware(
-        middleware.CORS(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-            userController.Register(w, r, httprouter.Params{})
-        })),
-    ))
+	router.OPTIONS("/*any", WrapHandlerWithMiddleware(
+		middleware.CORS(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+			w.WriteHeader(http.StatusOK)
+		}))),
+	)
 
-    router.POST("/login", WrapHandlerWithMiddleware(
-        middleware.CORS(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-            userController.Login(w, r, httprouter.Params{})
-        })),
-    ))
+	router.POST("/users", WrapHandlerWithMiddleware(
+		middleware.CORS(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+			userController.Register(w, r, httprouter.Params{})
+		})),
+	))
 
-	router.POST("/notes", WrapHandlerWithJWT(
-        middleware.CORS(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-            noteController.Create(w, r, httprouter.Params{})
-        })),
-    ))
+	router.POST("/login", WrapHandlerWithMiddleware(
+		middleware.CORS(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+			userController.Login(w, r, httprouter.Params{})
+		})),
+	))
 
-	router.PUT("/notes/:id", WrapHandlerWithJWT(
-        middleware.CORS(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-            noteController.Update(w, r, httprouter.Params{})
-        })),
-    ))
-
-	router.DELETE("/notes/:id", WrapHandlerWithJWT(
-        middleware.CORS(http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
-            noteController.Delete(w, r, httprouter.Params{})
-        })),
-    ))
+	router.POST("/notes", WrapHandlerWithJWT(noteController.Create))
+	router.PUT("/notes/:id", WrapHandlerWithJWT(noteController.Update))
+	router.DELETE("/notes/:id", WrapHandlerWithJWT(noteController.Delete))
+	router.GET("/notes", WrapHandlerWithJWT(noteController.GetAll))
+	router.GET("/notes/:id", WrapHandlerWithJWT(noteController.FindById))
 
 	router.GET("/swagger/*any", WrapHandlerWithMiddleware(
-		middleware.CORS(httpSwagger.Handler(
-			httpSwagger.URL("http://localhost:8080/swagger/doc.json"),
-		)),
+		middleware.CORS(
+			httpSwagger.Handler(httpSwagger.URL("http://localhost:8080/swagger/doc.json")),
+		),
 	))
 
 	return router
