# backend/docs/swagger.yaml
@@ -1,4 +1,24 @@
+basePath: /
 definitions:
+  web.NoteCreateRequest:
+    properties:
+      content:
+        type: string
+      title:
+        type: string
+    required:
+    - content
+    - title
+    type: object
+  web.NoteUpdateRequest:
+    properties:
+      content:
+        type: string
+      id:
+        type: string
+      title:
+        type: string
+    type: object
   web.UserLoginRequest:
     properties:
       email:
@@ -40,8 +60,12 @@ definitions:
       status:
         type: string
     type: object
+host: localhost:8080
 info:
   contact: {}
+  description: API for Note Application
+  title: Notes API
+  version: "1.0"
 paths:
   /login:
     post:
@@ -97,6 +121,93 @@ paths:
       summary: Login a user
       tags:
       - Users
+  /notes:
+    get:
+      consumes:
+      - application/json
+      description: Get all notes for authorized user
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.WebResponse'
+      security:
+      - BearerAuth: []
+      summary: Get all notes
+      tags:
+      - Notes
+    post:
+      consumes:
+      - application/json
+      description: Create a new note for user
+      parameters:
+      - description: Create Note
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/web.NoteCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.WebResponse'
+      security:
+      - BearerAuth: []
+      summary: Create a new note
+      tags:
+      - Notes
+  /notes/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Delete note by ID
+      parameters:
+      - description: Note ID
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.WebResponse'
+      security:
+      - BearerAuth: []
+      summary: Delete a note
+      tags:
+      - Notes
+  /notes{id}:
+    put:
+      consumes:
+      - application/json
+      description: Update existing note
+      parameters:
+      - description: Update Note
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/web.NoteUpdateRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/web.WebResponse'
+      security:
+      - BearerAuth: []
+      summary: Update a note
+      tags:
+      - Notes
   /users:
     post:
       consumes:
@@ -142,4 +253,9 @@ paths:
       summary: Register a new user
       tags:
       - Users
+securityDefinitions:
+  BearerAuth:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
